Finish to modified (hopefully) the element classes to save only the attributes that have been set, there are still some problem with annotations and notes but the rest of the SBMLWriter is working fine. Removed all the Sytem.out, will need to replace all of them by a proper logging